--- a/development/backend/deployment.yaml
+++ b/development/backend/deployment.yaml
@@ -17,3 +17,9 @@ spec:
           image: omerbenda98/puppy-adoption-backend:latest
           ports:
             - containerPort: 8181
+          env:
+            - name: MONGODB_URI
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-uri
