--- a/development/backend/service.yaml
+++ b/development/backend/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: backend-service
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 8181
       targetPort: 8181
