--- a/production/frontend/service.yaml
+++ b/production/frontend/service.yaml
@@ -1,11 +1,12 @@
+# production/frontend/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-    - port: 3000
+    - port: 3000 # Added hyphen for array item
       targetPort: 3000
   selector:
     app: frontend
