--- a/production/frontend/deployment.yaml
+++ b/production/frontend/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: frontend
           image: omerbenda98/puppy-adoption-frontend:1b6e67e6f79c03e0180725144a9b755f20528d08
-          # imagePullPolicy: Always
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
           env: # Fixed indentation and structure for env
