simple name change

--- a/argocd/production-app.yaml
+++ b/argocd/production-app.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: frontend-app
+  name: frontend-production
   namespace: argocd
 spec:
   project: default
