--- a/production/ingress.yaml
+++ b/production/ingress.yaml
@@ -8,6 +8,9 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
 spec:
   ingressClassName: nginx
   # tls:
@@ -25,6 +28,15 @@ spec:
                 name: backend-service
                 port:
                   number: 8181
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 3000
+    - http: # This is the catch-all rule
+        paths:
           - path: /
             pathType: Prefix
             backend:
