--- a/argocd/backend/production-app.yaml
+++ b/argocd/backend/production-app.yaml
@@ -1,17 +1,18 @@
+# production-app.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: backend-development
+  name: frontend-production
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/omerbenda98/puppy-adoption-k8s.git
     targetRevision: main
-    path: development/backend
+    path: main/frontend
   destination:
     server: https://kubernetes.default.svc
-    namespace: development
+    namespace: production
   syncPolicy:
     automated:
       prune: true
