--- a/argocd/backend/backend-prod.yaml
+++ b/argocd/backend/backend-prod.yaml
@@ -1,18 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: frontend-development
+  name: backend-production
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/omerbenda98/puppy-adoption-k8s.git
     targetRevision: main
-    path: development/frontend
+    path: production/backend
   destination:
     server: https://kubernetes.default.svc
-    namespace: development
+    namespace: production
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
