--- a/kubernetes-jenkins/deployment.yaml
+++ b/kubernetes-jenkins/deployment.yaml
@@ -66,7 +66,11 @@ spec:
               mountPath: /usr/bin/docker
               subPath: docker
             - name: nodejs-bin
-              mountPath: /usr/local/bin
+              mountPath: /usr/local/bin/node
+              subPath: node
+            - name: nodejs-bin
+              mountPath: /usr/local/bin/npm
+              subPath: npm
       volumes:
         - name: jenkins-data
           persistentVolumeClaim:
