--- a/kubernetes-jenkins/deployment.yaml
+++ b/kubernetes-jenkins/deployment.yaml
@@ -84,3 +84,9 @@ spec:
           emptyDir: {}
       securityContext:
         fsGroup: 1000
+        runAsUser: 1000
+      containers:
+      - name: jenkins
+        securityContext:
+          runAsUser: 1000
+          runAsGroup: 1000
