--- a/kubernetes-jenkins/deployment.yaml
+++ b/kubernetes-jenkins/deployment.yaml
@@ -7,26 +7,75 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: jenkins
+      app: jenkins-server
   template:
     metadata:
       labels:
-        app: jenkins
+        app: jenkins-server
     spec:
+      serviceAccountName: jenkins
       securityContext:
         fsGroup: 1000
+      initContainers:
+        - name: docker-installer
+          image: docker:dind
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              mkdir -p /docker-cli
+              cp $(which docker) /docker-cli/
+              chmod +x /docker-cli/docker
+          volumeMounts:
+            - name: docker-cli
+              mountPath: /docker-cli
       containers:
         - name: jenkins
           image: jenkins/jenkins:lts
+          securityContext:
+            privileged: true
+            runAsUser: 0
+          resources:
+            limits:
+              memory: "2Gi"
+              cpu: "1000m"
+            requests:
+              memory: "500Mi"
+              cpu: "500m"
           ports:
-            - containerPort: 8080
-            - containerPort: 50000
+            - name: httpport
+              containerPort: 8080
+            - name: jnlpport
+              containerPort: 50000
+          livenessProbe:
+            httpGet:
+              path: "/login"
+              port: 8080
+            initialDelaySeconds: 90
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 5
+          readinessProbe:
+            httpGet:
+              path: "/login"
+              port: 8080
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
           volumeMounts:
             - name: jenkins-data
               mountPath: /var/jenkins_home
-          securityContext:
-            runAsUser: 1000
+            - name: docker-sock
+              mountPath: /var/run/docker.sock
+            - name: docker-cli
+              mountPath: /usr/bin/docker
+              subPath: docker
       volumes:
         - name: jenkins-data
           persistentVolumeClaim:
             claimName: jenkins-pv-claim
+        - name: docker-sock
+          hostPath:
+            path: /var/run/docker.sock
+        - name: docker-cli
+          emptyDir: {}
