--- a/staging/frontend/service.yaml
+++ b/staging/frontend/service.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: frontend-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 3000 # Added hyphen for array item
       targetPort: 3000
