--- a/production/frontend/service.yaml
+++ b/production/frontend/service.yaml
@@ -4,10 +4,9 @@ kind: Service
 metadata:
   name: frontend-service
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 3000 # Added hyphen for array item
       targetPort: 3000
-      nodePort: 30090
   selector:
     app: frontend
