--- a/production/configmap.yaml
+++ b/production/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: app-config
+  namespace: production # Added namespace
 data:
   NODE_ENV: "production"
   API_URL: "http://backend-service:8181/api"
