--- a/argocd/frontend/staging-app.yaml
+++ b/argocd/frontend/staging-app.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: frontend-production
+  name: frontend-staging # Changed from frontend-production
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/omerbenda98/puppy-adoption-k8s.git
     targetRevision: main
-    path: main/frontend
+    path: staging/frontend # Changed from main/frontend
   destination:
     server: https://kubernetes.default.svc
-    namespace: production
+    namespace: staging # Changed from production
   syncPolicy:
     automated:
       prune: true
