--- a/staging/configmap.yaml
+++ b/staging/configmap.yaml
@@ -3,5 +3,6 @@ kind: ConfigMap
 metadata:
   name: app-config
 data:
-  NODE_ENV: "development"
-  API_URL: "http://localhost:8181/api"
+  NODE_ENV: "staging"
+  REACT_APP_ENV: "staging"
+  API_URL: "https://puppyadoptions.duckdns.org/api"
