--- a/staging/configmap.yaml
+++ b/staging/configmap.yaml
@@ -5,4 +5,4 @@ metadata:
 data:
   NODE_ENV: "staging"
   REACT_APP_ENV: "staging"
-  API_URL: "https://puppyadoptions.duckdns.org/api"
+  API_URL: "https://puppyadoptions.duckdns.org:32224/api"
