--- a/staging/ingress-nginx-controller-staging.yaml
+++ b/staging/ingress-nginx-controller-staging.yaml
@@ -18,6 +18,11 @@ spec:
       protocol: TCP
       targetPort: https
       nodePort: 32223 # For frontend staging
+      - appProtocol: https
+      name: https-prod
+      port: 443
+      protocol: TCP
+      targetPort: https # For production HTTPS
   selector:
     app.kubernetes.io/component: controller
     app.kubernetes.io/instance: ingress-nginx
