--- a/staging/ingress-nginx-controller-staging.yaml
+++ b/staging/ingress-nginx-controller-staging.yaml
@@ -3,6 +3,10 @@ kind: Service
 metadata:
   name: ingress-nginx-controller
   namespace: ingress-nginx
+  labels:
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/name: ingress-nginx
 spec:
   type: NodePort
   ports:
@@ -11,13 +15,18 @@ spec:
       port: 80
       protocol: TCP
       targetPort: http
-      nodePort: 32224
+      nodePort: 32222 # Production HTTP
     - appProtocol: https
-      name: https
+      name: https-staging
       port: 443
       protocol: TCP
       targetPort: https
-      nodePort: 32223
+      nodePort: 32223 # Staging HTTPS
+    - appProtocol: https
+      name: https-prod
+      port: 443
+      protocol: TCP
+      targetPort: https # Production HTTPS
   selector:
     app.kubernetes.io/component: controller
     app.kubernetes.io/instance: ingress-nginx
