--- a/production/ingress.yaml
+++ b/production/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: puppy-adoption-ingress
+  namespace: production
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
@@ -16,9 +17,27 @@ spec:
   tls:
     - hosts:
         - puppyadoptions.duckdns.org
+        - staging.puppyadoptions.duckdns.org
       secretName: puppy-tls-secret
   rules:
     - host: puppyadoptions.duckdns.org
+      http:
+        paths:
+          - path: /api
+            pathType: Prefix
+            backend:
+              service:
+                name: backend-service
+                port:
+                  number: 8181
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 3000
+    - host: staging.puppyadoptions.duckdns.org
       http:
         paths:
           - path: /api
