--- a/production/ingress.yaml
+++ b/production/ingress.yaml
@@ -17,7 +17,6 @@ spec:
   tls:
     - hosts:
         - puppyadoptions.duckdns.org
-        - staging.puppyadoptions.duckdns.org
       secretName: puppy-tls-secret
   rules:
     - host: puppyadoptions.duckdns.org
@@ -37,20 +36,20 @@ spec:
                 name: frontend-service
                 port:
                   number: 3000
-    - host: staging.puppyadoptions.duckdns.org
-      http:
-        paths:
-          - path: /api
-            pathType: Prefix
-            backend:
-              service:
-                name: backend-service # Name remains the same
-                port:
-                  number: 8181
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: frontend-service # Name remains the same
-                port:
-                  number: 3000
+    # - host: staging.puppyadoptions.duckdns.org
+    #   http:
+    #     paths:
+    #       - path: /api
+    #         pathType: Prefix
+    #         backend:
+    #           service:
+    #             name: backend-service # Name remains the same
+    #             port:
+    #               number: 8181
+    #       - path: /
+    #         pathType: Prefix
+    #         backend:
+    #           service:
+    #             name: frontend-service # Name remains the same
+    #             port:
+    #               number: 3000
