--- a/production/configmap.yaml
+++ b/production/configmap.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: app-config
-  namespace: production # Added namespace
+  namespace: production
 data:
   NODE_ENV: "production"
-  API_URL: "http://backend-service:8181/api"
+  REACT_APP_ENV: "production"
+  API_URL: "https://puppyadoptions.duckdns.org/api"
