--- a/staging/staging-ingress.yaml
+++ b/staging/staging-ingress.yaml
@@ -17,7 +17,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: staging.puppyadoptions.duckdns.org
+    - host: puppyadoptions.duckdns.org
       http:
         paths:
           - path: /api
