--- a/staging/configmap.yaml
+++ b/staging/configmap.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: app-config
-  namespace: staging
 data:
   NODE_ENV: "staging"
   REACT_APP_ENV: "staging"
-  API_URL: "http://puppyadoptions.duckdns.org:32223/api"
+  API_URL: "https://puppyadoptions.duckdns.org:32224/api"
