--- a/production/ingress.yaml
+++ b/production/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: puppy-adoption-ingress
   namespace: production
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
@@ -14,6 +14,7 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502"
     nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "3"
+    # Add these for better connection handling
     nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
     nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
 spec:
@@ -40,3 +41,20 @@ spec:
                 name: frontend-service
                 port:
                   number: 3000
+    # - host: staging.puppyadoptions.duckdns.org
+    #   http:
+    #     paths:
+    #       - path: /api
+    #         pathType: Prefix
+    #         backend:
+    #           service:
+    #             name: backend-service # Name remains the same
+    #             port:
+    #               number: 8181
+    #       - path: /
+    #         pathType: Prefix
+    #         backend:
+    #           service:
+    #             name: frontend-service # Name remains the same
+    #             port:
+    #               number: 3000
