--- a/staging/ingress.yaml
+++ b/staging/ingress.yaml
@@ -23,7 +23,7 @@ spec:
     - host: puppyadoptions.duckdns.org
       http:
         paths:
-          - path: /api(/|$)(.*)
+          - path: /api
             pathType: Prefix
             backend:
               service:
