--- a/staging/ingress.yaml
+++ b/staging/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: staging-ingress # Changed name to avoid conflicts
+  name: staging-ingress
   namespace: staging
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
@@ -21,13 +21,6 @@ spec:
     - host: puppyadoptions.duckdns.org
       http:
         paths:
-          - path: /api
-            pathType: Prefix
-            backend:
-              service:
-                name: backend-service
-                port:
-                  number: 8181
           - path: /
             pathType: Prefix
             backend:
@@ -35,3 +28,10 @@ spec:
                 name: frontend-service
                 port:
                   number: 3000
+          # - path: /api
+          #   pathType: Prefix
+          #   backend:
+          #     service:
+          #       name: backend-service
+          #       port:
+          #         number: 8181
