--- a/staging/frontend/service.yaml
+++ b/staging/frontend/service.yaml
@@ -4,10 +4,9 @@ metadata:
   name: frontend-service
   namespace: staging
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 3000
       targetPort: 3000
-      nodePort: 32223 # Add this line to explicitly set the NodePort
   selector:
     app: frontend
