--- a/staging/ingress.yaml
+++ b/staging/ingress.yaml
@@ -10,6 +10,8 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^(/staging)$ $1/ permanent;
 spec:
   ingressClassName: nginx
   rules:
