--- a/staging/ingress.yaml
+++ b/staging/ingress.yaml
@@ -18,7 +18,7 @@ spec:
     - host: puppyadoptions.duckdns.org
       http:
         paths:
-          - path: /staging(/|$)(.*)
+          - path: /staging
             pathType: Prefix
             backend:
               service:
