--- a/staging/frontend/deployment.yaml
+++ b/staging/frontend/deployment.yaml
@@ -31,9 +31,9 @@ spec:
                   key: API_URL
                   optional: true
             - name: HOST
-              value: "staging.puppyadoptions.duckdns.org" # Updated for staging
+              value: "puppyadoptions.duckdns.org" # Updated for staging
             - name: WDS_SOCKET_HOST
-              value: "staging.puppyadoptions.duckdns.org"
+              value: "puppyadoptions.duckdns.org"
             - name: KUBERNETES_SERVICE_HOST
               valueFrom:
                 fieldRef:
