--- a/staging/ingress.yaml
+++ b/staging/ingress.yaml
@@ -9,21 +9,13 @@ metadata:
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
     - host: puppyadoptions.duckdns.org
       http:
         paths:
-          - path: /staging/static/?(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: frontend-service
-                port:
-                  number: 3000
-          - path: /staging
+          - path: /
             pathType: Prefix
             backend:
               service:
