staging backend nodeport added

--- a/staging/ingress.yaml
+++ b/staging/ingress.yaml
@@ -22,10 +22,10 @@ spec:
                 name: frontend-service
                 port:
                   number: 3000
-          # - path: /api
-          #   pathType: Prefix
-          #   backend:
-          #     service:
-          #       name: backend-service
-          #       port:
-          #         number: 8181
+          - path: /api
+            pathType: Prefix
+            backend:
+              service:
+                name: backend-service
+                port:
+                  number: 8181
