--- a/staging/backend/service.yaml
+++ b/staging/backend/service.yaml
@@ -1,11 +1,13 @@
-apiVersion: v1
+CopyapiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: staging
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 8181
       targetPort: 8181
+      nodePort: 32224 # Using a different port than frontend
   selector:
     app: backend
