--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# IDE files
-.idea/
-.vscode/
-
-# OS files
-.DS_Store".terraform/" 
+.terraform/ 
+*.tfstate 
+*.tfstate.* 
+*.tfvars 
+.terraform.lock.hcl 
