--- a/production/frontend/deployment.yaml
+++ b/production/frontend/deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
+  namespace: production
 spec:
   replicas: 1
   selector:
