--- a/infrastructure/ansible/templates/minikube-proxy.conf
+++ b/infrastructure/ansible/templates/minikube-proxy.conf
@@ -13,8 +13,8 @@ server {
     server_name puppyadoptions.duckdns.org;
 
     # SSL Configuration
-    ssl_certificate /etc/letsencrypt/live/puppyadoptions.duckdns.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/puppyadoptions.duckdns.org/privkey.pem;
+    ssl_certificate /home/ubuntu/puppy-adoptions-k8s/production/certificates/tls.crt;
+    ssl_certificate_key /home/ubuntu/puppy-adoptions-k8s/production/certificates/tls.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers off;
