--- a/production/backend/service.yaml
+++ b/production/backend/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: production
 spec:
   type: ClusterIP # Change from NodePort to ClusterIP
   ports:
