--- a/infrastructure/ansible/templates/minikube-proxy.conf
+++ b/infrastructure/ansible/templates/minikube-proxy.conf
@@ -1,16 +1,20 @@
-# HTTP redirect
+# HTTP server
 server {
     listen 80;
     listen [::]:80;
-    server_name puppyadoptions.duckdns.org;
-    return 301 https://$server_name$request_uri;
-}
+    server_name puppies-adopt.duckdns.org;
 
+
+
+    location / {
+        return 301 https://$http_host$request_uri;
+    }
+}
 # Production HTTPS
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name puppyadoptions.duckdns.org;
+    server_name puppies-adopt.duckdns.org;
 
     # SSL Configuration
     ssl_certificate /home/ubuntu/puppy-adoptions-k8s/production/certificates/tls.crt;
@@ -19,27 +23,25 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers off;
 
-    # Common proxy settings
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-
-    # Production Frontend & Backend through Ingress
     location / {
-        proxy_pass http://192.168.49.2:80;  # Production ingress controller port
+        proxy_pass https://192.168.49.2:31240;
+        proxy_ssl_verify off;
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
 
 # Staging HTTPS on port 32223
 server {
     listen 32223 ssl;
-    server_name puppyadoptions.duckdns.org;
+    server_name puppies-adopt.duckdns.org;
 
     # SSL Configuration
     ssl_certificate /home/ubuntu/puppy-adoptions-k8s/production/certificates/tls.crt;
@@ -48,26 +50,29 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers off;
 
-    # Common proxy settings
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-
-    # Staging Frontend
     location / {
-        proxy_pass http://192.168.49.2:32223;  # Staging frontend NodePort
+        proxy_pass http://192.168.49.2:32223;
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
-    # Staging Backend
     location /api {
-        proxy_pass http://192.168.49.2:32224;  # Staging backend NodePort
+        proxy_pass http://192.168.49.2:32224;
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
