--- a/infrastructure/ansible/templates/minikube-proxy.conf
+++ b/infrastructure/ansible/templates/minikube-proxy.conf
@@ -3,19 +3,16 @@ server {
     listen 80;
     listen [::]:80;
     server_name puppies-adopt.duckdns.org;
-
-
-
     location / {
         return 301 https://$http_host$request_uri;
     }
 }
+
 # Production HTTPS
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name puppies-adopt.duckdns.org;
-
     # SSL Configuration
     ssl_certificate /home/ubuntu/puppy-adoptions-k8s/production/certificates/tls.crt;
     ssl_certificate_key /home/ubuntu/puppy-adoptions-k8s/production/certificates/tls.key;
@@ -23,9 +20,23 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers off;
 
+    # Frontend
     location / {
-        proxy_pass https://192.168.49.2:31240;
-        proxy_ssl_verify off;
+        proxy_pass http://192.168.49.2:31240;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    # API
+    location /api {
+        proxy_pass http://192.168.49.2:31241;  # Assuming this is your API NodePort
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
         proxy_http_version 1.1;
@@ -42,14 +53,13 @@ server {
 server {
     listen 32223 ssl;
     server_name puppies-adopt.duckdns.org;
-
     # SSL Configuration
     ssl_certificate /home/ubuntu/puppy-adoptions-k8s/production/certificates/tls.crt;
     ssl_certificate_key /home/ubuntu/puppy-adoptions-k8s/production/certificates/tls.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers off;
-
+    
     location / {
         proxy_pass http://192.168.49.2:32223;
         proxy_read_timeout 300;
@@ -62,7 +72,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
-
+    
     location /api {
         proxy_pass http://192.168.49.2:32224;
         proxy_read_timeout 300;
