--- a/production/frontend/service.yaml
+++ b/production/frontend/service.yaml
@@ -5,10 +5,9 @@ metadata:
   name: frontend-service
   namespace: production
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-    - port: 3000 # Added hyphen for array item
+    - port: 3000
       targetPort: 3000
-      nodePort: 31240
   selector:
     app: frontend
