--- a/infrastructure/ansible/templates/minikube-proxy.conf
+++ b/infrastructure/ansible/templates/minikube-proxy.conf
@@ -22,7 +22,7 @@ server {
 
     # Frontend
     location / {
-        proxy_pass http://192.168.49.2:31240;
+        proxy_pass https://192.168.49.2:31240;
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
         proxy_http_version 1.1;
